--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^3.0.0-beta.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
