--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "semantic-ui-css": "^2.5.0",
